# Personal-Website

./: .gitignore  README.md  ToDO.md
backend/: .gitignore  database.db  pyproject.toml
backend/app/: auth.py  data.json  database.py  main.py  models.py  schemas.py  seed.py
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AboutSection.tsx  Contact.tsx  CreativeCard.tsx  Footer.tsx  Navbar.tsx  ProjectCard.tsx  StatusBar.tsx
frontend/src/pages/: Admin.tsx  Archive.tsx  Home.tsx  Life.tsx  Login.tsx
