[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Javin2005",email = "163754193+Javin2005@users.noreply.github.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.138.2,<0.139.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "pydantic[email] (>=2.13.4,<3.0.0)",
    "sqlmodel (>=0.0.39,<0.0.40)",
    "resend (>=2.32.2,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "bcrypt (==4.0.1)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "httpx (>=0.28.1,<0.29.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "gunicorn (>=26.0.0,<27.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
